assert(is_Loop()) failed: invalid node class

XMLWordPrintable

    • b28
    • Verified

        Test failed with following assertion. Test code is attached.
        #
        # A fatal error has been detected by the Java Runtime Environment:
        #
        # Internal Error (open/src/hotspot/share/opto/node.hpp:836), pid=4197, tid=4210
        # assert(is_Loop()) failed: invalid node class
        #
        # JRE version: Java(TM) SE Runtime Environment (14.0+11) (fastdebug build 14-ea+11-371)
        # Java VM: Java HotSpot(TM) 64-Bit Server VM (fastdebug 14-ea+11-371, compiled mode, sharing, tiered, compressed oops, g1 gc, linux-amd64)
        # Problematic frame:
        # V [libjvm.so+0x11e6410] PhaseIdealLoop::convert_add_to_muladd(Node*)+0x500
        #
        # Core dump will be written. Default location: Core dumps may be processed with "/usr/libexec/abrt-hook-ccpp %s %c %p %u %g %t e %P %I %h" (or dumping to /tmp/fuzzer.tmp.1P0e0J2D4u/core.4197)
        #
        # If you would like to submit a bug report, please visit:
        # http://bugreport.java.com/bugreport/crash.jsp
        #

        --------------- S U M M A R Y ------------

        Command Line: -Xmx1G -Xcomp -Xbatch -XX:CompileOnly=Test Test

        Host: sca00gea, Intel(R) Xeon(R) CPU E5-2690 0 @ 2.90GHz, 4 cores, 14G, Oracle Linux Server release 7.5
        Time: Sun Aug 25 05:52:24 2019 UTC elapsed time: 0 seconds (0d 0h 0m 0s)

        --------------- T H R E A D ---------------

        Current thread (0x00007fbf8c258800): JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=4210, stack(0x00007fbf70444000,0x00007fbf70545000)]


        Current CompileTask:
        C2: 229 9 % !b 4 Test::mainTest @ 137 (521 bytes)

        Stack: [0x00007fbf70444000,0x00007fbf70545000], sp=0x00007fbf7053f2f0, free space=1004k
        Native frames: (J=compiled Java code, A=aot compiled Java code, j=interpreted, Vv=VM code, C=native code)
        V [libjvm.so+0x11e6410] PhaseIdealLoop::convert_add_to_muladd(Node*)+0x500
        V [libjvm.so+0x11e6e97] PhaseIdealLoop::split_if_with_blocks_pre(Node*)+0x407
        V [libjvm.so+0x11e84c1] PhaseIdealLoop::split_if_with_blocks(VectorSet&, Node_Stack&)+0x121
        V [libjvm.so+0x11df8fb] PhaseIdealLoop::build_and_optimize(LoopOptsMode)+0x101b
        V [libjvm.so+0x9c757a] PhaseIdealLoop::optimize(PhaseIterGVN&, LoopOptsMode)+0x2ea
        V [libjvm.so+0x9c3f33] Compile::Optimize()+0x443
        V [libjvm.so+0x9c5ccf] Compile::Compile(ciEnv*, C2Compiler*, ciMethod*, int, bool, bool, bool, DirectiveSet*)+0x109f
        V [libjvm.so+0x80914d] C2Compiler::compile_method(ciEnv*, ciMethod*, int, DirectiveSet*)+0x10d
        V [libjvm.so+0x9d25d0] CompileBroker::invoke_compiler_on_method(CompileTask*)+0x3e0
        V [libjvm.so+0x9d35c8] CompileBroker::compiler_thread_loop()+0x3b8
        V [libjvm.so+0x16cbd12] JavaThread::thread_main_inner()+0x312
        V [libjvm.so+0x16d3ecf] JavaThread::run()+0x29f
        V [libjvm.so+0x16d0dc6] Thread::call_run()+0xf6
        V [libjvm.so+0x13f0d9e] thread_native_entry(Thread*)+0x10e

        Register to memory mapping:

        RAX=0x00007fbf93b4d000 points into unknown readable memory: 58 00 00 00 00 00 00 00
        RBX=0x00007fbf48110d68 points into unknown readable memory: 30 2b df 92 bf 7f 00 00
        RCX=0x00007fbf92a61166: <offset 0x00000000019e4166> in /scratch/lmesnik/jenkins/workspace/JavaFuzzer/jdk-14/fastdebug/lib/server/libjvm.so at 0x00007fbf9107d000
        RDX=0x00007fbf92a79740: <offset 0x00000000019fc740> in /scratch/lmesnik/jenkins/workspace/JavaFuzzer/jdk-14/fastdebug/lib/server/libjvm.so at 0x00007fbf9107d000
        RSP=0x00007fbf7053f2f0 is pointing into the stack for thread: 0x00007fbf8c258800
        RBP=0x00007fbf7053f370 is pointing into the stack for thread: 0x00007fbf8c258800
        RSI=0x0000000000000344 is an unknown value
        RDI=0x00007fbf92901c60: <offset 0x0000000001884c60> in /scratch/lmesnik/jenkins/workspace/JavaFuzzer/jdk-14/fastdebug/lib/server/libjvm.so at 0x00007fbf9107d000
        R8 =0x00007fbf4811fa60 points into unknown readable memory: a0 02 e0 92 bf 7f 00 00
        R9 =0x0000000000000006 is an unknown value
        R10=0x000000000000006c is an unknown value
        R11=0x00007fbf70e269d8 is pointing into metadata
        R12=0x00007fbf4810f428 points into unknown readable memory: 40 e8 df 92 bf 7f 00 00
        R13=0x00007fbf48110598 points into unknown readable memory: 40 e8 df 92 bf 7f 00 00
        R14=0x00007fbf7053fa20 is pointing into the stack for thread: 0x00007fbf8c258800
        R15=0x00007fbf48154f50 points into unknown readable memory: 20 b2 e1 92 bf 7f 00 00


        Registers:
        RAX=0x00007fbf93b4d000, RBX=0x00007fbf48110d68, RCX=0x00007fbf92a61166, RDX=0x00007fbf92a79740
        RSP=0x00007fbf7053f2f0, RBP=0x00007fbf7053f370, RSI=0x0000000000000344, RDI=0x00007fbf92901c60
        R8 =0x00007fbf4811fa60, R9 =0x0000000000000006, R10=0x000000000000006c, R11=0x00007fbf70e269d8
        R12=0x00007fbf4810f428, R13=0x00007fbf48110598, R14=0x00007fbf7053fa20, R15=0x00007fbf48154f50
        RIP=0x00007fbf92263410, EFLAGS=0x0000000000010287, CSGSFS=0x0000000000000033, ERR=0x0000000000000006
          TRAPNO=0x000000000000000e

        Top of Stack: (sp=0x00007fbf7053f2f0)
        0x00007fbf7053f2f0: 00007fbf7053f370 00007fbf9226257a
        0x00007fbf7053f300: 00007fbf7053fa20 00007fbf4810f3a0
        0x00007fbf7053f310: 00007fbf92a61101 00007fbf4810fbc0
        0x00007fbf7053f320: 00007fbf48154f50 00007fbf4810fb00

        Instructions: (pc=0x00007fbf92263410)
        0x00007fbf92263310: 1c e1 bb 00 48 83 c0 10 49 89 04 24 48 89 de 4c
        0x00007fbf92263320: 89 f7 e8 89 15 fc ff 4c 89 e6 4c 89 f7 48 89 c2
        0x00007fbf92263330: e8 eb 0c 3c 00 49 8b be b8 09 00 00 4c 89 e2 48
        0x00007fbf92263340: 89 de e8 89 07 67 ff e9 5f fc ff ff 0f 1f 40 00
        0x00007fbf92263350: 48 8d 05 a9 f0 bc 00 41 b8 02 00 00 00 48 8d 0d
        0x00007fbf92263360: d7 dd 7f 00 48 8d 15 e3 dd 7f 00 be 73 01 00 00
        0x00007fbf92263370: 48 8d 3d e9 e8 69 00 48 8b 00 c6 00 58 44 8b 4b
        0x00007fbf92263380: 1c 31 c0 e8 48 c9 89 ff e8 a3 23 20 00 48 8b 43
        0x00007fbf92263390: 08 e9 ee fb ff ff 66 2e 0f 1f 84 00 00 00 00 00
        0x00007fbf922633a0: 48 8d 05 59 f0 bc 00 48 8d 15 a0 dd 7f 00 41 b8
        0x00007fbf922633b0: 01 00 00 00 48 8d 0d 80 dd 7f 00 be 73 01 00 00
        0x00007fbf922633c0: 48 8d 3d 99 e8 69 00 48 8b 00 c6 00 58 44 8b 4b
        0x00007fbf922633d0: 1c 31 c0 e8 f8 c8 89 ff e8 53 23 20 00 8b 53 1c
        0x00007fbf922633e0: e9 8e fb ff ff 0f 1f 00 48 8d 05 11 f0 bc 00 be
        0x00007fbf922633f0: 44 03 00 00 4c 89 45 c8 48 8d 3d 61 e8 69 00 48
        0x00007fbf92263400: 8d 0d 60 dd 7f 00 48 8d 15 33 63 81 00 48 8b 00
        0x00007fbf92263410: c6 00 58 31 c0 e8 b6 c8 89 ff e8 11 23 20 00 4c
        0x00007fbf92263420: 8b 45 c8 4c 89 c7 e8 35 43 fe ff 84 c0 0f 85 c8
        0x00007fbf92263430: fb ff ff e9 70 fb ff ff 49 8d 75 1c 49 8d 7d 08
        0x00007fbf92263440: e8 4b b2 ff ff 48 8b 75 b8 4c 89 ff 49 89 c4 e8
        0x00007fbf92263450: 3c b2 ff ff 49 39 c4 0f 85 3e fe ff ff e8 2e b6
        0x00007fbf92263460: ff ff 49 89 c4 48 85 c0 0f 84 ae fe ff ff 4c 8b
        0x00007fbf92263470: 4d c0 4c 8b 45 a8 e9 80 fe ff ff 90 0f 1f 40 00
        0x00007fbf92263480: 55 48 89 e5 41 54 49 89 fc 53 0f b7 46 30 48 89
        0x00007fbf92263490: f3 83 e0 3f 66 83 f8 20 74 33 48 8d 05 5f ef bc
        0x00007fbf922634a0: 00 48 8d 0d ab d3 7f 00 48 8d 15 39 c9 78 00 be
        0x00007fbf922634b0: 30 02 00 00 48 8d 3d 3d d3 78 00 48 8b 00 c6 00
        0x00007fbf922634c0: 58 31 c0 e8 08 c8 89 ff e8 63 22 20 00 83 7b 18
        0x00007fbf922634d0: 03 75 15 48 89 de 4c 89 e7 5b 41 5c 5d e9 0e cd
        0x00007fbf922634e0: ff ff 66 0f 1f 44 00 00 5b 31 c0 41 5c 5d c3 90
        0x00007fbf922634f0: 55 48 89 e5 41 57 49 89 f7 48 89 d6 41 56 41 55
        0x00007fbf92263500: 41 54 49 89 d4 53 48 89 fb 48 81 ec 08 01 00 00


        Stack slot to memory mapping:
        stack at sp + 0 slots: 0x00007fbf7053f370 is pointing into the stack for thread: 0x00007fbf8c258800
        stack at sp + 1 slots: 0x00007fbf9226257a: <offset 0x00000000011e557a> in /scratch/lmesnik/jenkins/workspace/JavaFuzzer/jdk-14/fastdebug/lib/server/libjvm.so at 0x00007fbf9107d000
        stack at sp + 2 slots: 0x00007fbf7053fa20 is pointing into the stack for thread: 0x00007fbf8c258800
        stack at sp + 3 slots: 0x00007fbf4810f3a0 points into unknown readable memory: 10 81 df 92 bf 7f 00 00
        stack at sp + 4 slots: 0x00007fbf92a61101: <offset 0x00000000019e4101> in /scratch/lmesnik/jenkins/workspace/JavaFuzzer/jdk-14/fastdebug/lib/server/libjvm.so at 0x00007fbf9107d000
        stack at sp + 5 slots: 0x00007fbf4810fbc0 points into unknown readable memory: c0 a9 df 92 bf 7f 00 00
        stack at sp + 6 slots: 0x00007fbf48154f50 points into unknown readable memory: 20 b2 e1 92 bf 7f 00 00
        stack at sp + 7 slots: 0x00007fbf4810fb00 points into unknown readable memory: 00 00 00 00 00 00 00 00


        --------------- P R O C E S S ---------------

        uid : 154972 euid : 154972 gid : 10 egid : 10

        umask: 0022 (----w--w-)

        Threads class SMR info:
        _java_thread_list=0x00007fbf8c2bcf10, length=9, elements={
        0x00007fbf8c022000, 0x00007fbf8c24a000, 0x00007fbf8c24c800, 0x00007fbf8c256000,
        0x00007fbf8c258800, 0x00007fbf8c25a800, 0x00007fbf8c25d000, 0x00007fbf8c2b2800,
        0x00007fbf8c2bf000
        }
        _java_thread_list_alloc_cnt=10, _java_thread_list_free_cnt=8, _java_thread_list_max=9, _nested_thread_list_max=0
        _tlh_cnt=40, _tlh_times=0, avg_tlh_time=0.00, _tlh_time_max=0
        _delete_lock_wait_cnt=0, _delete_lock_wait_max=0
        _to_delete_list_cnt=0, _to_delete_list_max=1

        Java Threads: ( => current thread )
          0x00007fbf8c022000 JavaThread "main" [_thread_blocked, id=4198, stack(0x00007fbf93a20000,0x00007fbf93b21000)]
          0x00007fbf8c24a000 JavaThread "Reference Handler" daemon [_thread_blocked, id=4206, stack(0x00007fbf70747000,0x00007fbf70848000)]
          0x00007fbf8c24c800 JavaThread "Finalizer" daemon [_thread_blocked, id=4207, stack(0x00007fbf70646000,0x00007fbf70747000)]
          0x00007fbf8c256000 JavaThread "Signal Dispatcher" daemon [_thread_blocked, id=4208, stack(0x00007fbf70545000,0x00007fbf70646000)]
        =>0x00007fbf8c258800 JavaThread "C2 CompilerThread0" daemon [_thread_in_native, id=4210, stack(0x00007fbf70444000,0x00007fbf70545000)]
          0x00007fbf8c25a800 JavaThread "C1 CompilerThread0" daemon [_thread_blocked, id=4211, stack(0x00007fbf70343000,0x00007fbf70444000)]
          0x00007fbf8c25d000 JavaThread "Sweeper thread" daemon [_thread_blocked, id=4212, stack(0x00007fbf70242000,0x00007fbf70343000)]
          0x00007fbf8c2b2800 JavaThread "Service Thread" daemon [_thread_blocked, id=4213, stack(0x00007fbf70141000,0x00007fbf70242000)]
          0x00007fbf8c2bf000 JavaThread "Common-Cleaner" daemon [_thread_blocked, id=4215, stack(0x00007fbf61eff000,0x00007fbf62000000)]

        Other Threads:

          1. FuzzerUtils$1.class
            0.8 kB
          2. FuzzerUtils.class
            8 kB
          3. Test.class
            5 kB
          4. Test.java
            8 kB
          5. FuzzerUtils.java
            13 kB
          6. hs_err_pid4197.log
            70 kB
          7. replay_pid4197.log
            100 kB

              Assignee:
              Jatin Bhateja
              Reporter:
              Leonid Mesnik
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

                Created:
                Updated:
                Resolved: