8230185: assert(is_Loop()) failed: invalid node class

Adding missing check for a counted loop.

Reviewed-by: kvn, thartmann